# GBA-demo-framework

./: .gitignore  .gitmodules  CMakeLists.txt  DevkitArmGBA.cmake  README.md
cmake/: CompilerFlagsGBA.cmake  ToolsGBA.cmake
src/: CMakeLists.txt  animation.cpp  animation.h  backgrounds.cpp  backgrounds.h  color.h  fptime.cpp  fptime.h  gradient.cpp  gradient.h  graphics.cpp  graphics.h  palette.cpp  palette.h  scene.cpp  scene.h  sprites.cpp  sprites.h  tiles.cpp  tiles.h  time.cpp  time.h  tui.cpp  tui.h  video.cpp  video.h
src/compression/: bios.cpp  bios.h  lz4.h  lz4_asm.s  lz77.h  lz77_asm.s
src/debug/: args.cpp  args.h  itoa.cpp  itoa.h  output.cpp  print.h
src/draw/: draw_geometry.cpp  draw_geometry.h  draw_gradient.cpp  draw_gradient.h  line.h
src/effect/: affine.cpp  affine.h  blend.cpp  blend.h  fadepalette.cpp  fadepalette.h  mosaic.cpp  mosaic.h
src/math/: fp16.cpp  fp16.h  fp16_arith.h  fp16_lerp.h  fp16_minmax.h  fp32.cpp  fp32.h  fp32_arith.h  fp32_lerp.h  fp32_minmax.h  fp32_trig.cpp  fp32_trig.h  fparith.cpp  fparith.h  fpassert.h  fphelpers.cpp  fphelpers.h  helpers.cpp  helpers.h  mat.cpp  mat.h  mat_arith.h  mat_vec.h  quat.h  random.cpp  random.h  random_u32.s  sqrt.s  vec.h  vec_arith.h  vec_lerp.h
src/memory/: dma.cpp  dma.h  memcpy.s  memory.cpp  memory.h  memset.s
src/print/: bench.h  itoa.h  output.cpp  output.h
src/sound/: effect.h  player.cpp  player.h  sound.cpp  sound.h  spectrum.cpp  spectrum.h  volume.cpp  volume.h
src/sys/: base.h  decompress.cpp  halt.cpp  halt.h  input.cpp  input.h  intdispatcher.s  interrupts.cpp  interrupts.h  memctrl.cpp  memctrl.h  platform_checks.cpp  platform_checks.h  sound.h  timers.h  video.h
test/: CMakeLists.txt  timing.h
test/gba/: CMakeLists.txt  main.cpp  test_copy.cpp  test_fp32.cpp  test_memory.cpp  tests.h
test/pc/: CMakeLists.txt  main.cpp  test_fp32.cpp  test_vec.cpp  tests.h
unused/: mode7.cpp  mode7.h
unused/render/: attribute.cpp  attribute.h  camera.cpp  camera.h  camera3D.cpp  camera3D.h  clip3D.h  common.cpp  common.h  cull3D.h  mesh.cpp  mesh.h  object3D.h  render2D.h  render3D.h  texture.cpp  texture.h  vertexcache.h
